Fix the keyword alignmment; Prevent wordwrap of second span.

--- a/imports/ui/stylesheets/recent_mentions.import.styl
+++ b/imports/ui/stylesheets/recent_mentions.import.styl
@@ -1,12 +1,15 @@
 #recentMentionsTable
   .kwic
-    text-align center
+    white-space nowrap
     margin auto
     :nth-child(1)
+      text-align right
       margin-right .5em
     :nth-child(1)
     :nth-child(2)
       display inline-block
+      width 23em
+      white-space nowrap
       strong
         display inline
         margin-right 0px
